# Forma-o-Python-Backend-Developer-DIO

./: Diagrama sem nome.drawio
Ambiente-virtual-pipenv/.env/: pyvenv.cfg
Ambiente-virtual-pipenv/.env/Scripts/: activate  activate.bat
Explorando Banco de Dados Relacionais Com Python DB API/: db_API.py  gerenciamento_transacao.py  meu_banco.db
Gerenciamento de Pacotes, convencoes e boas Praticas Python/: Diagrama sem nome.drawio
Gerenciamento de Pacotes, convencoes e boas Praticas Python/Boas_praticas_PEPs/: 01_boas_praticas.py  pep-8.py
Gerenciamento de Pacotes, convencoes e boas Praticas Python/Manipulacao_de_arquivos/: example.csv  novo_arquivo_write.txt  read.py  write.py
Gerenciamento de Pacotes, convencoes e boas Praticas Python/Manipulacao_de_arquivos/Boas_praticas/: boas_praticas.py
Gerenciamento de Pacotes, convencoes e boas Praticas Python/Manipulacao_de_arquivos/Gerenciando-arquivos/: Gerenciar_arquivos_diretorios.py
Gerenciamento de Pacotes, convencoes e boas Praticas Python/gerenciador_pacotes_poetry/: prueba.py  pyproject.toml
Manipulacao_de_arquivos/: Tratando__erros.py  trabalhando_csv.py
Manipulacao_de_arquivos/Boas_praticas/: 1lorem.txt
