[project]
name = "gerenciador-pacotes-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Colina",email = "ellocojoseangelcolinasierra07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "gerenciador-pacotes-poetry"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"